WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289578
[css-anchor-position-1] Adjust anchor()/anchor-size() for viewport and CSS zoom
https://bugs.webkit.org/show_bug.cgi?id=289578
Summary
[css-anchor-position-1] Adjust anchor()/anchor-size() for viewport and CSS zoom
Kiet Ho
Reported
2025-03-11 16:53:13 PDT
Created
attachment 474528
[details]
Reproduction Google Chrome 136.0.7062.3 (Official Build) canary (arm64) WebKit
291786@main
Steps to reproduce: * Load the attached repro * Zoom to 150% * Observe that the orange box gets positioned further and further away from the anchor with each zoom level.
Attachments
Reproduction
(907 bytes, text/html)
2025-03-11 16:53 PDT
,
Kiet Ho
no flags
Details
Screenshot (Chrome on left, Safari on right)
(251.20 KB, image/png)
2025-03-11 16:55 PDT
,
Kiet Ho
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-11 16:53:25 PDT
<
rdar://problem/146806814
>
Kiet Ho
Comment 2
2025-03-11 16:55:01 PDT
Created
attachment 474529
[details]
Screenshot (Chrome on left, Safari on right)
Kiet Ho
Comment 3
2025-03-22 01:11:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42874
EWS
Comment 4
2025-03-31 18:39:35 PDT
Committed
292985@main
(27cdd2696cac): <
https://commits.webkit.org/292985@main
> Reviewed commits have been landed. Closing PR #42874 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug