[css-anchor-position-1] Adjust anchor()/anchor-size() for viewport and CSS zoom rdar://146806814 https://bugs.webkit.org/show_bug.cgi?id=289578

Reviewed by Antti Koivisto.

The value returned by anchor()/anchor-size() is calculated at 1x viewport zoom,
which is wrong if either:
* the viewport is zoomed using Ctrl+/Ctrl-, or
* CSS zoom property is used.

This patch fixes this by adjusting the returned value by the zoom factor.

* LayoutTests/fast/css/css-anchor-position/anchor-page-zoom-expected.html: Added.
* LayoutTests/fast/css/css-anchor-position/anchor-page-zoom.html: Added.
    - Added test for anchor() + viewport zoom. This test can't be added to WPT,
      as WPT does not support changing viewport zoom factor.

* LayoutTests/fast/css/css-anchor-position/anchor-size-page-zoom-expected.html: Added.
* LayoutTests/fast/css/css-anchor-position/anchor-size-page-zoom.html: Added.
    - Added test for anchor-size() + viewport zoom. This test can't be added to WPT,
      as WPT does not support changing viewport zoom factor.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-css-zoom-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-css-zoom.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/reference/anchor-css-zoom-ref.html: Added.
    - Added test for anchor() + CSS zoom.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-size-css-zoom-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-size-css-zoom.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/reference/anchor-size-css-zoom-ref.html: Added.
    - Added test for anchor-size() + CSS zoom.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::evaluate):
(WebCore::Style::AnchorPositionEvaluator::evaluateSize):

Canonical link: https://commits.webkit.org/292985@main